version 0.8.2-rc1 - dd-MMM-2009
 . Actions: start/stop sets the target (issue #489)
 
version 0.8.2-rc0 - 5-Oct-2009
 . Actions: Added EaseBack family actios (issue #568)
 . AtlasSprite: set atlasIndex to invalid on remove (issue #569)
 . Box2d: using google code r22 (pre v2.1.0) (issue #494)
 . CocosNode: Better message error on scale (issue #556)
 . Effects: [effect copy] works (issue #573)
 . Effects: restore orignal director projection (issue #573)
 . Extras: added Joystick (issue #XXX)
 . FontLabel: updates version from git (issue #582)
 . Macros: CCLOG uses the "cocos2d:" prefix (issue #XXX)
 . Parallax: fixed limit of 5 children (issue #565)
 . Templates: works with FontLabel (part of issue #534)
 . Templates: added cocos2d+chipmunk template (issue #XXX)
 . TextureAtlas: insertQuad fixed signed math (issue #575)
 
version 0.8.2-beta - 23-Sept-2009
 . All: ccConfig.h file added (issue #551)
 . Actions: added Ease Elastic actions (issue #530)
 . Actions: added Ease Bounce actions (issue #546)
 . Actions: added PageTurn3D action (issue #522)
 . BitmapFontAtlas: fixed contentSize (issue #536, #538)
 . BitmapFontAtlas: fixed offset/width (issue #537)
 . BitmapFontAtlas: only supports Latin 1 chars (issue #517)
 . Box2d: using google code r21 (pre v2.1.0) (issue #494)
 . CocosDenshion: muted property in SimpleAudioEngine (issue #526)
 . CocosDenshion: added preloadBackgroundMusic and willBackgroundMusicPlay to SimpleAudioEngine (issue #545)
 . CocosNode: improved doxygen documentation (issue #XXX)
 . CocosNode: added boundingBox method (issue #528)
 . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
 . Director: fixed 2 leaks on Director#end (issue #524)
 . Director: Added a threaded FastDirector (issue #560)
 . Director: Added a CADisplayLink Director (issue #560)
 . Director: buffer default pixel format is RGBA_8888
 . Documentation: doxygen builds OK when there are spaces in the path (issue #540)