@@ -1,5 +1,7 @@
 version 0.8.2-rc1 - dd-MMM-2009
  . Actions: start/stop sets the target (issue #489)
+ . Particles: FreeMovement uses World-Coordinates (issue #241)
+ . Tests: Added Particle + Parallax test (part of issue #241)
  
 version 0.8.2-rc0 - 5-Oct-2009
  . Actions: Added EaseBack family actios (issue #568)
@@ -8,7 +10,7 @@ version 0.8.2-rc0 - 5-Oct-2009
  . CocosNode: Better message error on scale (issue #556)
  . Effects: [effect copy] works (issue #573)
  . Effects: restore orignal director projection (issue #573)
- . Extras: added Joystick (issue #XXX)
+ . Extras: added Joystick / ProximityManager (issue #XXX)
  . FontLabel: updates version from git (issue #582)
  . Macros: CCLOG uses the "cocos2d:" prefix (issue #XXX)
  . Parallax: fixed limit of 5 children (issue #565)
